refactor: update some swagger params
