# docs/swagger.json
@@ -72,7 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Client"
+                            "$ref": "#/definitions/dto.IDMessageRequest"
                         }
                     }
                 ],
@@ -140,7 +140,7 @@
         },
         "/api/message/group": {
             "get": {
-                "description": "get message",
+                "description": "get all messages",
                 "produces": [
                     "application/json"
                 ],
@@ -170,9 +170,9 @@
                 }
             }
         },
-        "/api/message/info": {
+        "/api/message/info/{id}": {
             "get": {
-                "description": "get message",
+                "description": "get message by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -185,13 +185,11 @@
                 "summary": "Get Messages",
                 "parameters": [
                     {
-                        "description": "Get detail data from message",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.IDMessageRequest"
-                        }
+                        "type": "string",
+                        "description": "ID of the message",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -213,51 +211,8 @@
                             "$ref": "#/definitions/apperror.AppError"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/apperror.AppError"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/notification/:time": {
-            "post": {
-                "description": "Get notification",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "notification"
-                ],
-                "summary": "Delete Notification",
-                "parameters": [
-                    {
-                        "description": "Get info by his created time about a specific notification ",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.TimeNotificationRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entity.Notification"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/apperror.AppError"
                         }
@@ -299,8 +254,8 @@
                     "201": {
                         "description": "Created"
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/apperror.AppError"
                         }
@@ -341,6 +296,55 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/notification/stat": {
+            "post": {
+                "description": "get notification",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notification"
+                ],
+                "summary": "get Notification",
+                "parameters": [
+                    {
+                        "description": "Get info by his created time about a specific notification ",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.TimeNotificationRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.Notification"
+                            }
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -512,26 +516,6 @@
                     "type": "string"
                 },
                 "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.Client": {
-            "type": "object",
-            "properties": {
-                "client_property": {
-                    "$ref": "#/definitions/entity.ClientProperty"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "id_client_properties": {
-                    "type": "string"
-                },
-                "phone_number": {
-                    "type": "string"
-                },
-                "time_zone": {
                     "type": "string"
                 }
             }
